<resources>
    <string name="app_name">App-Nahuatl-v0.001</string>
    <string name="strInicio">Inicio</string>
    <string name="strGram">Gramatica</string>
    <string name="strNumeros">Numeros</string>
    <string name="strAbecedario">Abecedario</string>
    <string name="strSaludos">Saludos</string>
    <string name="strPronombres">Pronombres</string>
    <string name="strPerfil">Perfil</string>
    <string name="strPerfilItem">Perfil</string>
    <string name="strLogout">Cerrar sesion</string>
    <string name="strAbout">Acerca de</string>
    <string name="title_activity_login">Login</string>
    <string name="TituloTabla">Abecedario Nahuat</string>
    <string name="TituloTablaNumeros">Números en Nahuat</string>
    <string name="CDbtnH">ayohtli</string>
    <string name="CDbtnY">yacatzotl</string>
    <string name="CDbtnX">xochitl</string>
    <string name="CDbtnTS">tsapot</string>
    <string name="CDbtnO">omitl</string>
    <string name="CDbtnCH">chichi</string>
    <string name="CDbtnN">nochtli</string>
    <string name="CDbtnA">azcatl</string>
    <string name="CDbtnP">pitzotl</string>
    <string name="CDbtnS">sayoli</string>
    <string name="CDbtnM">miston</string>
    <string name="CDbtnE">epatl</string>
    <string name="CDbtnL">mil-li</string>
    <string name="CDbtnT">tochi</string>
    <string name="CDbtnKW">kweitl</string>
    <string name="CDbtnU">ueue</string>
    <string name="CDbtnJ">ajox</string>
    <string name="CDbtnK">konetl</string>
    <string name="CDbtnTL">tlitl</string>
    <string name="CDbtnW">wewehcho</string>
    <string name="CDbtnI">ichka</string>
    <string name="navopen">Abrir menu</string>
    <string name="navclose">Cerrar menu</string>
    <string name="strInicioHeader">Inicio</string>
    <string name="strLogoAppHeader">LogoAprendeNahuat</string>
    <string name="str_toolbartitle">Aprende Nahuat</string>
    <string name="strLogoNavbar">Logo de aplicación</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_TabSaludosyColores">Saludos y Colores en Nahuat</string>
    <string name="strPronom">Pronombres en Nahuat</string>
</resources>