<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8CD83"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_principal"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu"
                app:title="@string/str_toolbartitle">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:layout_gravity="end"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/strLogoNavbar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo65" />
                </FrameLayout>

            </androidx.appcompat.widget.Toolbar>


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvTituloTabla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_span="4"
                        android:gravity="center_horizontal"
                        android:text="@string/TituloTabla"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btnA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00EC9276"
                        android:contentDescription="@string/CDbtnA"
                        app:srcCompat="@drawable/a" />

                    <ImageButton
                        android:id="@+id/btnCH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnCH"
                        app:srcCompat="@drawable/ch"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnE"
                        app:srcCompat="@drawable/e"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btnH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnH"
                        app:srcCompat="@drawable/h" />

                    <ImageButton
                        android:id="@+id/btnI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnI"
                        app:srcCompat="@drawable/i"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnJ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnJ"
                        app:srcCompat="@drawable/j"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btnK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnK"
                        app:srcCompat="@drawable/k"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnKW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnKW"
                        app:srcCompat="@drawable/kw"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnL"
                        app:srcCompat="@drawable/l"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal">

                    <ImageButton
                        android:id="@+id/btnM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnM"
                        app:srcCompat="@drawable/m"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnN"
                        app:srcCompat="@drawable/n"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnO"
                        app:srcCompat="@drawable/o"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal">

                    <ImageButton
                        android:id="@+id/btnP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnP"
                        app:srcCompat="@drawable/p"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnS"
                        app:srcCompat="@drawable/s"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnT"
                        app:srcCompat="@drawable/t"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal">

                    <ImageButton
                        android:id="@+id/btnTL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnTL"
                        app:srcCompat="@drawable/tl" />

                    <ImageButton
                        android:id="@+id/btnTS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnTS"
                        app:srcCompat="@drawable/ts" />

                    <ImageButton
                        android:id="@+id/btnU"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnU"
                        app:srcCompat="@drawable/u"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal">

                    <ImageButton
                        android:id="@+id/btnW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnW"
                        app:srcCompat="@drawable/w" />

                    <ImageButton
                        android:id="@+id/btnX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnX"
                        app:srcCompat="@drawable/x"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/CDbtnY"
                        app:srcCompat="@drawable/y"
                        tools:ignore="ImageContrastCheck" />
                </TableRow>
            </TableLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>